--- a/frontend/src/pages/AliexpressVip3.css
+++ b/frontend/src/pages/AliexpressVip3.css
@@ -730,3 +730,9 @@
     grid-template-columns: 1fr !important;
   }
 }
+
+@media (max-width: 460px) {
+  .vipLogoCard {
+    margin-top: 10vh;
+  }
+}
